# amira-sbfsem-cell-mask

./: .gitignore  LICENSE  README.md  cell_mask.pyscro  cell_mask.rc  cell_mask_core.py  mkdocs.yml  pyproject.toml  requirements.txt
amira/resources/: cellfocus.rc
amira/script_objects/: cellfocus.pyscro
docs/: about.md  amira.md  example.md  index.md  installation.md  outputs.md  usage.md
src/cellfocus/: __init__.py  cell_mask_core.py
tests/: test_pipeline.py
